Future Build 1.0.0.2

WebService Changes:

- added a "JoinGroup" function to the Groupscontroller
- added a GM-Property (string username) to groups
- added a SINGroupSettings-Object to the DataModel for an upcomming online-settings-archive.
- searching for a group implemented by name, user, sinner
- corrected a Bug where POST to the repository did not change the Visibility of the character if updated.
- sinneruserright for uploading user will now be added if not existent
- uploading user is now checked if he/she actually may update a existing sinner
- added a SetUserRole-Call, so that Admins can set roles (like other Admins or "ArchetypeAdmin or whatever")
- added the ability to create a group (with name)
- found a bug that prevented uploading for none-admins (damn - I'm just used to have all the rights...)

Application Changes:

- fixed a bug that deleted the freshly downloaded characterfile while loading the charfile (yes, I was confused as well)
- after the Post of the metadata, now the actual file is uploaded as well in the SINnersBasic-Tab
- added a check, if a character is already uploaded before enabling the "open group dialog"-button
- Runtime now allows (or should allow) code from remote sources (plugin-dlls are not loaded otherwise under Windows-UAC)
- Globaloptions now saves which plugins are enabled in the registry
- Changing the URL of the Chummerhub-Repository in the options no longer crashes the program.
- refractored the CharacterTreeNodes, to support Groups in the frmCharacterRoster (not finished yet)
- hopefully fixed a IndexOutOfRangeException, that would occur when saving the options from the sinner-optionsdialog.
- searchdialog prototyped and search implemented
- Id of SINnerVisibility is now generated and not reused from the options for each Sinner (DuplicateKeyError)
- added a post prior to creating a new group, so the current sinner can be added automatically
- added the ability to create a group.