@@ -1,0 +1,3 @@
+<ApplicationInsights xmlns="http://schemas.microsoft.com/ApplicationInsights/2013/Settings">
+    <InstrumentationKey>8a551326-7224-4b2d-a0d1-81a7b0415824</InstrumentationKey>
+</ApplicationInsights>
