@@ -1,16 +1,21 @@
 using System;
 using System.Collections;
 using System.Collections.Generic;
+using System.Data.Common;
+using System.Data.SqlClient;
 using System.Linq;
 using System.Net;
 using System.Threading.Tasks;
+using ChummerHub.API;
 using ChummerHub.Data;
 using ChummerHub.Models.V1;
+using Microsoft.ApplicationInsights.DataContracts;
 using Microsoft.AspNetCore.Authorization;
 using Microsoft.AspNetCore.Http;
 using Microsoft.AspNetCore.Identity;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.EntityFrameworkCore;
+using Microsoft.Extensions.Logging;
 
 namespace ChummerHub.Controllers
 {
@@ -25,13 +30,16 @@ namespace ChummerHub.Controllers
         private SignInManager<ApplicationUser> _signInManager = null;
         private ApplicationDbContext _context;
         private RoleManager<ApplicationRole> _roleManager;
+        private readonly ILogger _logger;
 
         public AccountController(ApplicationDbContext context,
+            ILogger<AccountController> logger,
             UserManager<ApplicationUser> userManager,
             SignInManager<ApplicationUser> signInManager,
             RoleManager<ApplicationRole> roleManager)
         {
             _context = context;
+            _logger = logger;
             _userManager = userManager;
             _signInManager = signInManager;
             _roleManager = roleManager;
@@ -84,6 +92,140 @@ namespace ChummerHub.Controllers
             catch (Exception e)
             {
                 return BadRequest(e);
+            }
+        }
+
+        [HttpGet]
+        [Swashbuckle.AspNetCore.Annotations.SwaggerResponse((int)HttpStatusCode.OK)]
+        [Swashbuckle.AspNetCore.Annotations.SwaggerResponse((int)HttpStatusCode.Conflict)]
+        [Swashbuckle.AspNetCore.Annotations.SwaggerResponse((int)HttpStatusCode.BadRequest)]
+        [Swashbuckle.AspNetCore.Annotations.SwaggerOperation("GetAddSqlDbUser")]
+        [Authorize(Roles = "Administrator")]
+        public async Task<ActionResult<string>> GetAddSqlDbUser(string username, string password)
+        {
+            string result = "";
+            try
+            {
+                if (String.IsNullOrEmpty(username))
+                    throw new ArgumentNullException(nameof(username));
+                if (String.IsNullOrEmpty(password))
+                    throw new ArgumentNullException(nameof(password));
+                if (String.IsNullOrEmpty(Startup.ConnectionStringToMasterSqlDb))
+                {
+                    throw new ArgumentNullException("Startup.ConnectionStringToMasterSqlDB");
+                }
+
+                
+                try
+                {
+                    string cmd = "CREATE LOGIN " + username + " WITH password = '" + password + "';";
+                    using (SqlConnection masterConnection = new SqlConnection(Startup.ConnectionStringToMasterSqlDb))
+                    {
+                        await masterConnection.OpenAsync();
+                        using (SqlCommand dbcmd = new SqlCommand(cmd, masterConnection))
+                        {
+                            dbcmd.ExecuteNonQuery();
+                        }
+                    }
+                }
+                catch (SqlException e)
+                {
+                    result += e.Message + Environment.NewLine + Environment.NewLine;
+                }
+                //create the user in the master DB
+                try
+                {
+                    string cmd = "CREATE USER " + username + " FROM LOGIN " + username +";";
+                    using(SqlConnection masterConnection = new SqlConnection(Startup.ConnectionStringToMasterSqlDb))
+                    {
+                        await masterConnection.OpenAsync();
+                        using(SqlCommand dbcmd = new SqlCommand(cmd, masterConnection))
+                        {
+                            dbcmd.ExecuteNonQuery();
+                        }
+                    }
+                }
+                catch(SqlException e)
+                {
+                    result += e.Message + Environment.NewLine + Environment.NewLine;
+                }
+                //create the user in the sinner_db as well!
+                try
+                {
+                    string cmd = "CREATE USER " + username + " FROM LOGIN " + username + ";";
+                    using(SqlConnection masterConnection = new SqlConnection(Startup.ConnectionStringSinnersDb))
+                    {
+                        await masterConnection.OpenAsync();
+                        using(SqlCommand dbcmd = new SqlCommand(cmd, masterConnection))
+                        {
+                            dbcmd.ExecuteNonQuery();
+                        }
+                    }
+                }
+                catch(Exception e)
+                {
+                    result += e.Message + Environment.NewLine + Environment.NewLine;
+                }
+                try
+                {
+                    string cmd = "ALTER ROLE dbmanager ADD MEMBER " + username + ";";
+                    using(SqlConnection masterConnection = new SqlConnection(Startup.ConnectionStringSinnersDb))
+                    {
+                        await masterConnection.OpenAsync();
+                        using(SqlCommand dbcmd = new SqlCommand(cmd, masterConnection))
+                        {
+                            dbcmd.ExecuteNonQuery();
+                        }
+                    }
+                }
+                catch(Exception e)
+                {
+                    bool worked = false;
+                    try
+                    {
+                        string cmd = "EXEC sp_addrolemember 'db_owner', '" + username + "';";
+                        using(SqlConnection masterConnection = new SqlConnection(Startup.ConnectionStringSinnersDb))
+                        {
+                            await masterConnection.OpenAsync();
+                            using(SqlCommand dbcmd = new SqlCommand(cmd, masterConnection))
+                            {
+                                dbcmd.ExecuteNonQuery();
+                            }
+                        }
+                        worked = true;
+                    }
+                    catch (Exception e1)
+                    {
+                        result += e1.ToString() + Environment.NewLine + Environment.NewLine;
+                    }
+                    if (worked)
+                    {
+                        result += "User added!" + Environment.NewLine + Environment.NewLine;
+                    }
+                    else
+                    {
+                        result += e.Message + Environment.NewLine + Environment.NewLine;
+                    }
+                }
+                return Ok(result);
+            }
+            catch(Exception e)
+            {
+                try
+                {
+                    var user = await _signInManager.UserManager.GetUserAsync(User);
+                    var tc = new Microsoft.ApplicationInsights.TelemetryClient();
+                    ExceptionTelemetry et = new ExceptionTelemetry(e);
+                    et.Properties.Add("user", User.Identity.Name);
+                    tc.TrackException(et);
+                }
+                catch(Exception ex)
+                {
+                    if (_logger != null)
+                        _logger.LogError(ex.ToString());
+                }
+                result += Environment.NewLine + e;
+                return BadRequest(result);
             }
         }
 
