@@ -1,20 +1,34 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SINners_DB;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information",
-      "Newtonsoft.Json": "Debug"
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SINners_DB;Trusted_Connection=True;MultipleActiveResultSets=true",
+        "MasterSqlConnection": "Server=(localdb)\\mssqllocaldb;Database=master;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
-    "Console": {
-      "IncludeScopes": true
+    "Logging": {
+        "LogLevel": {
+            "Default": "Debug",
+            "System": "Information",
+            "Microsoft": "Information",
+            "Newtonsoft.Json": "Debug"
+        },
+        "Console": {
+            "IncludeScopes": true
+        }
+    },
+    "AllowedHosts": "*",
+    "ApplicationInsights": {
+        "InstrumentationKey": "8a551326-7224-4b2d-a0d1-81a7b0415824"
+    },
+    "SnapshotCollectorConfiguration": {
+        "IsEnabledInDeveloperMode": false,
+        "ThresholdForSnapshotting": 1,
+        "MaximumSnapshotsRequired": 3,
+        "MaximumCollectionPlanSize": 50,
+        "ReconnectInterval": "00:15:00",
+        "ProblemCounterResetInterval": "1.00:00:00",
+        "SnapshotsPerTenMinutesLimit": 1,
+        "SnapshotsPerDayLimit": 30,
+        "SnapshotInLowPriorityThread": true,
+        "ProvideAnonymousTelemetry": true,
+        "FailedRequestLimit": 3
     }
-  },
-  "AllowedHosts": "*",
-  "ApplicationInsights": {
-    "InstrumentationKey": "8a551326-7224-4b2d-a0d1-81a7b0415824"
-  }
 }
