@@ -2,6 +2,7 @@ Future Build 1.0.0.2
 
 WebService Changes:
 
+- added the ability to add sqlusers to the Azure-Database (Swagger GetAddSqlDbUser), so that Admins can connect via SSMS or Azure Data Studio 
 - added a "JoinGroup" function to the Groupscontroller
 - added a GM-Property (string username) to groups
 - added a SINGroupSettings-Object to the DataModel for an upcomming online-settings-archive.
@@ -15,6 +16,7 @@ WebService Changes:
 
 Application Changes:
 
+- removed the #ifdebug-braces, so that the SINners-Tab will be visible in release (SinnerSearch-Menuitem is still returning null in Release)
 - fixed a bug that deleted the freshly downloaded characterfile while loading the charfile (yes, I was confused as well)
 - after the Post of the metadata, now the actual file is uploaded as well in the SINnersBasic-Tab
 - added a check, if a character is already uploaded before enabling the "open group dialog"-button
